# Copyright (C) 2006 Luca Filipozzi
MAINTAINERCLEANFILES=Makefile.in setup.h.in setup.h.in~
SUBDIRS=conf
noinst_HEADERS=channel.h channel_mode.h chanserv.h client.h conf.h connection.h crypt.h dbm.h defines.h hash.h hostmask.h interface.h language.h lua_module.h modules.h nickserv.h operserv.h packet.h parse.h ruby_module.h send.h services.h stdinc.h
