# Copyright (C) 2006 Luca Filipozzi
MAINTAINERCLEANFILES=Makefile.in setup.h.in setup.h.in~
SUBDIRS=conf
noinst_HEADERS=channel.h channel_mode.h chanserv.h client.h conf.h connection.h crypt.h dbm.h defines.h hash.h hostmask.h interface.h language.h modules.h msg.h nickserv.h operserv.h packet.h parse.h ruby_module.h send.h services.h stdinc.h floodserv.h mqueue.h nickname.h jupe.h akill.h dbchannel.h
