# Copyright (C) 2006 Luca Filipozzi
MAINTAINERCLEANFILES=Makefile.in setup.h.in setup.h.in~
SUBDIRS=conf
noinst_HEADERS= akick.h						\
								akill.h						\
								channel.h 				\
								channel_mode.h		\
								chanserv.h				\
								client.h					\
								conf.h						\
								connection.h			\
								crypt.h						\
								dbchannel.h				\
								dbm.h							\
								defines.h					\
								floodserv.h				\
								hash.h						\
								hostmask.h				\
								interface.h				\
								jupe.h						\
								language.h				\
								modules.h					\
								msg.h							\
								mqueue.h					\
								nickname.h				\
								nickserv.h				\
								operserv.h				\
								packet.h					\
								parse.h						\
								ruby_module.h			\
								send.h						\
								services.h				\
								stdinc.h
