# Copyright (C) 2006 Luca Filipozzi
MAINTAINERCLEANFILES=Makefile.in
noinst_LIBRARIES=libstring.a
libstring_a_SOURCES=irc_string.h match.c pcre_chartables.c pcre_compile.c pcre_exec.c pcre_fullinfo.c pcre_globals.c pcre.h pcre_internal.h pcre_study.c pcre_tables.c pcre_try_flipped.c snprintf.c sprintf_irc.c sprintf_irc.h string.c
libstring_a_CFLAGS=-I.. -DIN_LIBIO
