# Copyright (C) 2006 Luca Filipozzi
MAINTAINERCLEANFILES=Makefile.in
noinst_LIBRARIES=libstring.a
libstring_a_SOURCES=irc_string.h match.cc pcre_chartables.cc pcre_compile.cc pcre_exec.cc pcre_fullinfo.cc pcre_globals.cc pcre.h pcre_internal.h pcre_study.cc pcre_tables.cc pcre_try_flipped.cc snprintf.cc sprintf_irc.cc sprintf_irc.h string.cc
libstring_a_CXXFLAGS=-I.. -DIN_LIBIO
